--- a/events/tahiti-tofino/index.html
+++ b/events/tahiti-tofino/index.html
@@ -46,10 +46,10 @@ $(document).on("ready", function() {
 
 
 <div class="details">
-<h1>Tiny Atlas Quartly<br>Trips</h1>
+<h1>Tiny Atlas Quarterly<br>Trips</h1>
 <p>For years Tiny Atlas Quarterly has traveled with you virtually. Now, we want to take you on an incredible adventure. We have planned two stories, just like in our magazine shoots, but this time we are inviting our community to come along for the journey.</p>
 
-<p>Tiny Atlas Quarterly magazine has partnered with Earth Missions (a seasoned adventure sports travel company) and Allswell Creative (a range of notebooks created to inspire creative expression) in planning two incredible adventures for you. Join us to experience a unique photography, surfing and outdoor adventure on the islands of Tahiti and Moorea or Vancouver Island in British Columbia. Tiny Atlas Quarterly founder, Emily Nathan will be on hand to help you create and share your photographic story from the trip. All guests will also be able to enter their work for consideration in our magazine’s forthcoming winter issue, REMOTE and on our <a href="https://instagram.com/tinyatlasquarterly" target="_blank">@tinyatlasquarterly</a> Instagram feed.</p>
+<p>Tiny Atlas Quarterly magazine has partnered with Earth Missions (a seasoned adventure sports travel company) and Allswell Creative (a range of notebooks created to inspire creative expression) in planning two incredible adventures for you. Join us to experience a unique photography, surfing and outdoor adventure on the islands of Tahiti and Mo'orea or Vancouver Island in British Columbia. Tiny Atlas Quarterly founder, Emily Nathan will be on hand to help you create and share your photographic story from the trip. All guests will also be able to enter their work for consideration in our magazine’s forthcoming winter issue, REMOTE and on our <a href="https://instagram.com/tinyatlasquarterly" target="_blank">@tinyatlasquarterly</a> Instagram feed.</p>
 
   </div>
   <div class="img-head">
@@ -60,7 +60,7 @@ $(document).on("ready", function() {
     <p>A wealth of wildlife awaits, including eagles, and the possibility of black bears, wolves and whales. The fall weather also brings great (yet accessible) surf. Based on your desired level of comfort, and how close you choose to get to nature each night, you can choose to stay in a yurt or luxury lodge, all moments outside Pacific Rim National Park.We will shoot alongside photographer and local legend, Jeremy Koreski, and the founders of Earth Missions and Allswell.</p>
     <p>Tiny Atlas’ founder and pro photographer, Emily Nathan will lead a daily workshop for photographers of all levels on how to plan, shoot, edit and share a photographic feature story. Laura Rubin, creator of AllSwell notebooks, will be on hand to provide tips and techniques to encourage creative expression in all forms, including the analog way – putting pen to paper.</p>
     <p>Not a surfer or experienced photographer yet? No worries! All you need is a love for the ocean and the arts, and an open mind.</p>
-    <p>Daily programming will include surf, yoga, creativity and photography training with full freedom to explore the coast on your own timeline if you prefer</p>
+    <p>Daily programming will include surf, yoga, creativity and photography training with full freedom to explore the coast on your own timeline if you prefer.</p>
     </div>
   </div>
   <div class="grid-wrapper">
