added dates & styles

--- a/events/tahiti-tofino/index.html
+++ b/events/tahiti-tofino/index.html
@@ -55,7 +55,8 @@ $(document).on("ready", function() {
   <div class="img-head">
   <img src="images/00_Tofino_TAQ_trip.jpg" alt="">
     <div class="txt-head">
-    <a href="#"><p>Vancouver Island, British Columbia</p></a>
+    <h3>Vancouver Island, British Columbia</h3>
+    <p class="date">October 6th-11th 2016</p>
     <p>On Vancouver Island we have dreamed up an ideal five-day vacation that combines photography, surf and outdoor adventure – shaped by a live-local travel itinerary and with planet conservation at the heart of the experience. We will surf pristine fall waves, photograph, hike, practice yoga and unwind in eco luxe lodges and yurts deep in the lush coastal rainforest on Vancouver Island’s west coast.</p>
     <p>A wealth of wildlife awaits, including eagles, and the possibility of black bears, wolves and whales. The fall weather also brings great (yet accessible) surf. Based on your desired level of comfort, and how close you choose to get to nature each night, you can choose to stay in a yurt or luxury lodge, all moments outside Pacific Rim National Park.We will shoot alongside photographer and local legend, Jeremy Koreski, and the founders of Earth Missions and Allswell.</p>
     <p>Tiny Atlas’ founder and pro photographer, Emily Nathan will lead a daily workshop for photographers of all levels on how to plan, shoot, edit and share a photographic feature story. Laura Rubin, creator of AllSwell notebooks, will be on hand to provide tips and techniques to encourage creative expression in all forms, including the analog way – putting pen to paper.</p>
@@ -83,7 +84,8 @@ $(document).on("ready", function() {
   <div class="img-subhead">
   <img src="images/00_Tahiti_TAQ_trip.jpg" alt="">
   <div class="txt-head">
-    <a href="#"><p>Tahiti and Mo’orea</p></a>
+    <h3>Tahiti and Mo’orea</h3>
+    <p class="date">November 9th-15th 2016</p>
     <p>On Tahiti and Mo'orea Island we will experience two gorgeous islands over six nights and seven days. This is a resort free zone. On Tahiti we will sleep in homestay bungalows with delicious meals prepared daily by our hosts. In Tahiti we will stay in the garden style bungalows right on the ocean. The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
     <p>We will start on Tahiti Island, then hop over to Mo'orea with local photographer Ben Thourad as our water guide, and Earth Missions founder, Tom Werney. Also at your side will be travel photographer and founder of Tiny Atlas Quarterly, Emily Nathan, and surf-adventurer and creator of AllSwell notebooks, Laura Rubin.</p>
     <p>These creative professionals will be there to provide surf, creative and photography guidance for the whole group or via one-to-one sessions for those who prefer private tutorials.</p>
