--- a/events/tahiti-tofino/index.html
+++ b/events/tahiti-tofino/index.html
@@ -109,7 +109,7 @@ $(document).on("ready", function() {
 
 
 
-  <div id="nav-holder"><div id="nav"><a href="../../index.html"><img src="../../images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></a></div></div>
+  <div id="nav-holder"><div id="nav"><a href="../../index.html"><img src="images/tiny-atlas-sm.jpg" alt="Tiny Atlas Quarterly"></a></div></div>
 
 </body>
 </html>
