--- a/events/tahiti-tofino/index.html
+++ b/events/tahiti-tofino/index.html
@@ -48,21 +48,34 @@ $(document).on("ready", function() {
 <div class="details">
 <h1>Tiny Atlas Quarterly<br>Trips</h1>
 <p>For years Tiny Atlas Quarterly has traveled with you virtually. Now, we want to take you on an incredible adventure. We have planned two stories, just like in our magazine shoots, but this time we are inviting our community to come along for the journey.</p>
-
-<p>Tiny Atlas Quarterly magazine has partnered with Earth Missions (a seasoned adventure sports travel company) and Allswell Creative (a range of notebooks created to inspire creative expression) in planning two incredible adventures for you. Join us to experience a unique photography, surfing and outdoor adventure on the islands of Tahiti and Mo'orea or Vancouver Island in British Columbia. Tiny Atlas Quarterly founder, Emily Nathan will be on hand to help you create and share your photographic story from the trip. All guests will also be able to enter their work for consideration in our magazine’s forthcoming winter issue, REMOTE and on our <a href="https://instagram.com/tinyatlasquarterly" target="_blank">@tinyatlasquarterly</a> Instagram feed.</p>
+<p>
+  All guests will also be able to enter their work for consideration in our magazine’s forthcoming winter issue, REMOTE and on our <a href="https://instagram.com/tinyatlasquarterly" target="_blank">@tinyatlasquarterly</a> Instagram feed.
+</p>
+<!-- <p>Tiny Atlas Quarterly magazine has partnered with Earth Missions (a seasoned adventure sports travel company) and Allswell Creative (a range of notebooks created to inspire creative expression) in planning two incredible adventures for you. Join us to experience a unique photography, surfing and outdoor adventure on the islands of Tahiti and Mo'orea or Vancouver Island in British Columbia. Tiny Atlas Quarterly founder, Emily Nathan will be on hand to help you create and share your photographic story from the trip. </p> -->
 
   </div>
   <div class="img-head">
   <img src="images/00_Tofino_TAQ_trip.jpg" alt="">
     <div class="txt-head">
-    <h3>Vancouver Island, British Columbia</h3>
-    <p class="date">October 6th-11th 2016</p>
+      <div class="txt-overview">
+        <h3>Vancouver Island, British Columbia</h3>
+        <p class="label">Date:</p>
+        <p> October 6th-11th 2016</p>
+        <p class="label">Guides:</p>
+        <p><a href="https://www.instagram.com/jeremykoreski/">Jeremy Koreski - Local Guide</a><br>
+        Emily Nathan<br>
+        Laura Rubin</p>
+        <p><a href="http://earthmissions.com/product/coastal-adventure-on-vancouver-island-british-columbia-with-allswell-and-tiny-atlas-quarterly/">Book this trip</a></p>
+
+      </div>
+      <div class="txt-content">
     <p>On Vancouver Island we have dreamed up an ideal five-day vacation that combines photography, surf and outdoor adventure – shaped by a live-local travel itinerary and with planet conservation at the heart of the experience. We will surf pristine fall waves, photograph, hike, practice yoga and unwind in eco luxe lodges and yurts deep in the lush coastal rainforest on Vancouver Island’s west coast.</p>
     <p>A wealth of wildlife awaits, including eagles, and the possibility of black bears, wolves and whales. The fall weather also brings great (yet accessible) surf. Based on your desired level of comfort, and how close you choose to get to nature each night, you can choose to stay in a yurt or luxury lodge, all moments outside Pacific Rim National Park.We will shoot alongside photographer and local legend, Jeremy Koreski, and the founders of Earth Missions and Allswell.</p>
     <p>Tiny Atlas’ founder and pro photographer, Emily Nathan will lead a daily workshop for photographers of all levels on how to plan, shoot, edit and share a photographic feature story. Laura Rubin, creator of AllSwell notebooks, will be on hand to provide tips and techniques to encourage creative expression in all forms, including the analog way – putting pen to paper.</p>
     <p>Not a surfer or experienced photographer yet? No worries! All you need is a love for the ocean and the arts, and an open mind.</p>
     <p>Daily programming will include surf, yoga, creativity and photography training with full freedom to explore the coast on your own timeline if you prefer</p>
-    <p><a href="http://earthmissions.com/product/coastal-adventure-on-vancouver-island-british-columbia-with-allswell-and-tiny-atlas-quarterly/">Book this trip</a> | <a href="https://www.instagram.com/jeremykoreski/">Jeremy Koreski - Local Guide</a></p>
+
+    </div>
     </div>
   </div>
   <div class="grid-wrapper">
@@ -84,14 +97,25 @@ $(document).on("ready", function() {
   <div class="img-subhead">
   <img src="images/00_Tahiti_TAQ_trip.jpg" alt="">
   <div class="txt-head">
-    <h3>Tahiti and Mo’orea</h3>
-    <p class="date">November 9th-15th 2016</p>
-    <p>On Tahiti and Mo'orea Island we will experience two gorgeous islands over six nights and seven days. This is a resort free zone. On Tahiti we will sleep in homestay bungalows with delicious meals prepared daily by our hosts. In Tahiti we will stay in the garden style bungalows right on the ocean. The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
-    <p>We will start on Tahiti Island, then hop over to Mo'orea with local photographer Ben Thourad as our water guide, and Earth Missions founder, Tom Werney. Also at your side will be travel photographer and founder of Tiny Atlas Quarterly, Emily Nathan, and surf-adventurer and creator of AllSwell notebooks, Laura Rubin.</p>
-    <p>These creative professionals will be there to provide surf, creative and photography guidance for the whole group or via one-to-one sessions for those who prefer private tutorials.</p>
-    <p>Not a surfer or experienced photographer yet? No worries! All you need is a love for the ocean and the arts, and an open mind.</p>
-    <p>Daily programming will include surf, yoga, creativity and photography training with full freedom to explore the coast on your own timeline if you prefer</p>
-    <p><a href="http://earthmissions.com/product/taq-allswell-tahiti/">Book this trip</a> | <a href="https://www.instagram.com/benthouard/">Ben Thouard - Local Guide</a></p>
+    <div class="txt-overview">
+      <h3>Tahiti and Mo’orea</h3>
+      <p class="label">Date:</p>
+      <p> November 9th-15th 2016</p>
+      <p class="label">Guides:</p>
+      <p><a href="https://www.instagram.com/benthouard/">Ben Thouard - Local Guide</a><br>
+      Tom Werney<br>
+      Emily Nathan<br>
+      Laura Rubin</p>
+      <p><a href="http://earthmissions.com/product/taq-allswell-tahiti/">Book this trip</a></p>
+
+    </div>
+    <div class="txt-content">
+      <p>On Tahiti and Mo'orea Island we will experience two gorgeous islands over six nights and seven days. This is a resort free zone. On Tahiti we will sleep in homestay bungalows with delicious meals prepared daily by our hosts. In Tahiti we will stay in the garden style bungalows right on the ocean. The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
+      <p>We will start on Tahiti Island, then hop over to Mo'orea with local photographer Ben Thourad as our water guide, and Earth Missions founder, Tom Werney. Also at your side will be travel photographer and founder of Tiny Atlas Quarterly, Emily Nathan, and surf-adventurer and creator of AllSwell notebooks, Laura Rubin.</p>
+      <p>These creative professionals will be there to provide surf, creative and photography guidance for the whole group or via one-to-one sessions for those who prefer private tutorials.</p>
+      <p>Not a surfer or experienced photographer yet? No worries! All you need is a love for the ocean and the arts, and an open mind.</p>
+      <p>Daily programming will include surf, yoga, creativity and photography training with full freedom to explore the coast on your own timeline if you prefer</p>
+      </div>
   </div>
   </div>
   <div class="grid-wrapper">
