--- a/events/tahiti-tofino/index.html
+++ b/events/tahiti-tofino/index.html
@@ -8,7 +8,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
 
         <link rel="stylesheet" type="text/css" href="../css/normalize.css" />
-        <link rel="stylesheet" type="text/css" href="../../css/fonts.css" />
+        <link rel="stylesheet" type="text/css" href="../css/fonts.css" />
         <link rel="stylesheet" type="text/css" href="../css/pages-events.css" />
         <link rel="shortcut icon" href="../../images/favicon.png">
 
