--- a/events/tahiti-tofino/index.html
+++ b/events/tahiti-tofino/index.html
@@ -51,14 +51,14 @@ $(document).on("ready", function() {
 <p>
   All guests will also be able to enter their work for consideration in our magazine’s forthcoming winter issue, REMOTE and on our <a href="https://instagram.com/tinyatlasquarterly" target="_blank">@tinyatlasquarterly</a> Instagram feed.
 </p>
-<!-- <p>Tiny Atlas Quarterly magazine has partnered with Earth Missions (a seasoned adventure sports travel company) and Allswell Creative (a range of notebooks created to inspire creative expression) in planning two incredible adventures for you. Join us to experience a unique photography, surfing and outdoor adventure on the islands of Tahiti and Mo'orea or Vancouver Island in British Columbia. Tiny Atlas Quarterly founder, Emily Nathan will be on hand to help you create and share your photographic story from the trip. </p> -->
+<p>Tiny Atlas Quarterly magazine has partnered with Earth Missions (a seasoned adventure sports travel company) and Allswell Creative (a range of notebooks created to inspire creative expression) in planning two incredible adventures for you. Join us to experience a unique photography, surfing and outdoor adventure on the islands of Tahiti and Mo'orea or Vancouver Island in British Columbia. Tiny Atlas Quarterly founder, Emily Nathan will be on hand to help you create and share your photographic story from the trip. </p>
 
   </div>
   <div class="img-head">
   <img src="images/00_Tofino_TAQ_trip.jpg" alt="">
     <div class="txt-head">
       <div class="txt-overview">
-        <h3>Vancouver Island, British Columbia</h3>
+        <h3>Vancouver Island,<br> British Columbia</h3>
         <p class="label">Date:</p>
         <p> October 6th-11th 2016</p>
         <p class="label">Guides:</p>
@@ -73,7 +73,7 @@ $(document).on("ready", function() {
     <p>A wealth of wildlife awaits, including eagles, and the possibility of black bears, wolves and whales. The fall weather also brings great (yet accessible) surf. Based on your desired level of comfort, and how close you choose to get to nature each night, you can choose to stay in a yurt or luxury lodge, all moments outside Pacific Rim National Park.We will shoot alongside photographer and local legend, Jeremy Koreski, and the founders of Earth Missions and Allswell.</p>
     <p>Tiny Atlas’ founder and pro photographer, Emily Nathan will lead a daily workshop for photographers of all levels on how to plan, shoot, edit and share a photographic feature story. Laura Rubin, creator of AllSwell notebooks, will be on hand to provide tips and techniques to encourage creative expression in all forms, including the analog way – putting pen to paper.</p>
     <p>Not a surfer or experienced photographer yet? No worries! All you need is a love for the ocean and the arts, and an open mind.</p>
-    <p>Daily programming will include surf, yoga, creativity and photography training with full freedom to explore the coast on your own timeline if you prefer</p>
+    <p>Daily programming will include surf, yoga, creativity and photography training with full freedom to explore the coast on your own timeline if you prefer.</p>
 
     </div>
     </div>
