--- a/events/tahiti-tofino/index.html
+++ b/events/tahiti-tofino/index.html
@@ -91,7 +91,7 @@ $(document).on("ready", function() {
   <div class="gram"><img class="lazy" src="images/09_Tofino_TAQ_trip_square.jpg"></div>
   <div class="gram"><img class="lazy" src="images/10_Tofino_TAQ_trip_square.jpg"></div>
   <div class="gram"><img class="lazy" src="images/11_Tofino_TAQ_trip_square.jpg"></div>
-
+  <div class="gram"><a href="http://instagram.com/absinthemindedswede" target="_blank"><img class="lazy" src="images/Journal.jpg"><p>Buy the notebook</p></a></div>
   </div>
 
   <div class="img-subhead">
