--- a/new-site/index.html
+++ b/new-site/index.html
@@ -38,6 +38,9 @@
 
 
   <div>
+    <div class="split cover">
+
+    </div>
     <div class="split content">
       <div class="intro">
         <div class="main-logo">
@@ -49,7 +52,7 @@
       </div>
 
       <div class="feature-grid">
-        <div class="feature-card feature-small"><a href="#">
+        <div class="feature-card feature-small"><a href="paris/index.html">
           <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/paris-preview.png" alt="" class="preview" />
           <div class="info">
             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/paris-title.png" alt="" class="title" />
@@ -91,9 +94,7 @@
 
       </div>
     </div>
-    <div class="split cover">
 
-    </div>
 
     <div class="section">
       <div class="trips">
@@ -102,6 +103,16 @@
         <p>Tiny Atlas Trips bring our stories to life in real time on incredible excursions across the globe. Produced in collaboration with adventure sports company, Earth Missions and analog creativity specialists Allswell, Tiny Atlas Trips are created for
           the public as well as influencers and can be customized for brands.</p>
       </div>
+
+
+              <div class="trip" style="background:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/trip-preview-tahiti.jpg) center no-repeat;background-size: cover;">
+                <div class="details">
+                  <h2>Tahiti</h2>
+                  <p>The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
+                  <button>View Trip</button>
+                </div>
+              </div>
+
         <div class="trip" style="background:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/trip-preview-tofino.jpg) center no-repeat;background-size: cover;">
           <div class="details">
             <h2>Tofino</h2>
@@ -110,13 +121,6 @@
           </div>
         </div>
 
-        <div class="trip" style="background:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/trip-preview-tahiti.jpg) center no-repeat;background-size: cover;">
-          <div class="details">
-            <h2>Tahiti</h2>
-            <p>The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
-            <button>View Trip</button>
-          </div>
-        </div>
       </div>
 
     </div>
