--- a/new-site/index.html
+++ b/new-site/index.html
@@ -12,10 +12,11 @@
 	  <meta name="author" content="Tiny Atlas Quarterly" />
       <meta name="p:domain_verify" content="4bdfb37a1fe17a7d155f8f4aeb954d7e"/>
 
-      <link rel="shortcut icon" href="images/favicon.png">
+    <link rel="shortcut icon" href="images/favicon.png">
 	  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	  <link rel="stylesheet" type="text/css" href="css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="css/homepage.css" />
+    <link rel="stylesheet" type="text/css" href="css/header.css" />
 
 
 
@@ -38,6 +39,29 @@
 
 
   <div>
+
+    <div class="header-container">
+      <div class="header-logo"><a href="index.html"><img src="images/TAQ-logo.png" alt="" class="logo"></a></div>
+ <div class="header-links-container">
+   <span class="header-links list-triangle"><a href="events/solas/index.html">Events</a>
+     <ul>
+       <li><a href="events/solas/index.html">SOLAS</a></li>
+       <li><a href="events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
+       <li><a href="events/leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
+       <li><a href="events/montauk/index.html">Montauk Show</a></li>
+     </ul>
+   </span>
+   <span class="header-links"><a href="about/index.html">About</a></span>
+   <span class="header-links list-triangle"><a href="about/masthead.html">Masthead</a>
+     <ul>
+       <li><a href="about/editors-letter.html">Editor's Letter</a></li>
+     </ul>
+   </span>
+
+   <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/collections/all" target="_blank">Shop</a></span>
+ </div>
+</div>
+
     <div class="split cover">
 
     </div>
