--- a/new-site/paris/index.html
+++ b/new-site/paris/index.html
@@ -588,7 +588,7 @@
                   <a href="../index.html"><img src="../images/feature-logo.png" alt="Tiny Atlas Quarterly" class="crest"></a>
                   <div class="title">
                     <span class="issue">City 2O17</span><br>
-                    <span class="feature">Havana</span>
+                    <span class="feature">Paris</span>
                   </div>
                 </div>
               </div>
