--- a/new-site/tel-aviv/index.html
+++ b/new-site/tel-aviv/index.html
@@ -396,7 +396,7 @@
                   <a href="../index.html"><img src="../images/feature-logo.png" alt="Tiny Atlas Quarterly" class="crest"></a>
                   <div class="title">
                     <span class="issue">City 2O17</span><br>
-                    <span class="feature">Havana</span>
+                    <span class="feature">Tel Aviv</span>
                   </div>
                 </div>
               </div>
