--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -123,8 +123,8 @@
                 <div id="nav">
                   <a href="../index.html"><img src="../images/feature-logo.png" alt="Tiny Atlas Quarterly" class="crest"></a>
                   <div class="title">
-                    <span class="issue">City 2O17</span><br>
-                    <span class="feature">Havana</span>
+                    <span class="issue"> </span><br>
+                    <span class="feature"> </span>
                   </div>
                 </div>
               </div>
