--- a/new-site/havana/index.html
+++ b/new-site/havana/index.html
@@ -178,6 +178,34 @@
                 </picture>
                 <!-- IMAGE END -->
 
+                <!-- BOX  INTERVIEW-->
+                     <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+
+                         <!-- CAPTION -->
+                         <!-- LEFT CAPTION -->
+                         <div class="pg-box-content">
+                            <!-- CONTENT -->
+                            <!-- INTERVIW -->
+                            <div id="pg-interview">
+                            <h2>Havana</h2>
+                            <p>I returned home from Cuba with a small bottle of 7 year rum, a half-smoked pack of Hollywood cigarettes and a few hand-thrown clay mugs from a local potter (to house the rum of course).  These souvenirs embody what were possibly the most lively five days of my life, in a city I’ve always dreamt of visiting. What I found most inspiring about my days in Cuba were those late afternoons walking around the city, feeling immersed in everyday Havana, the sun piercing through the calles, children playing soccer around every crumbling corner, and the lingering thread of music, lacing through my steps from windows and passing cars.</p>
+
+                            <p>My friend Andrew Tyree, who founded the travel initiative Coast to Costa, asked me to join him and his group of 16 strangers on a 5-day trip to Cuba. Andrew ‘s vision and drive for Coast to Costa’s guided trips is one that I can highly relate to – travel with eagerness, experience the city as locals do and to fully submersing yourself in everything you experience while you’re there. We did nothing short of that.</p>
+
+                            <p>Arriving in Havana I immediately felt the energy radiating from the streets. Like any city, cars and people are bustling at all hours of the day. Abuelas and abuelos are out on their balconies hanging out their laundry. But unlike any other city I’ve ever visited, there are no banks, no grocery stores and you will very rarely find any internet.  When you stop by a fresh coconut vendor, you might end up with  an ice cold Crystal beer instead. After just a day or two the lifestyle sort overcomes you.</p>
+
+                            <p>As vibrant and alive as this country is, it does not always favor tourists.  Trying to get somewhere? Be prepared for the car to break down. Getting directions? It’s likely you’ll misunderstand them. Old cars run on makeshift engines, the architecture that was once art-deco pristine condition is a distant memory. At some point, I just accepted it all. Experiencing Cuba as it is now, at the beginning of what will be some rapid change, gave me this overwhelming sense of love for the city exactly the way it is.</p>
+
+                            <p>Brandon, a friend and also one of the guides for Coast to Costa, told me while walking around taking photos; “the thing you’ll quickly realize is that everyone here is an entrepreneur.” During the day you can often find someone selling coconuts out of a small trailer cart or ice cream out of an ice chest strapped to the back of their bicycle. If you walk down the street, a guy may come up and say he saved your life from passing cars and request a CUP (Cuban Convertible Peso), and you might just have to give in. While wandering around a few streets just after dark one night I noticed how quickly you could buy a plate of food, candy or something to drink right out of someone’s front window. This culture survives off of so little and a little goes a long way.</p>
+
+                            <p>We stayed in a casa particular, a private apartment in a multi-level building in Old Havana. From the outside, the building looked shabby and in disrepair, but inside, beautiful tiled floors and colorful painted walls dressed with paintings made for a different impression. The balconies,  looking over the busy street below, brought a sense of the outside in. When staying with our host families we quickly became a part of the family, relishing the home cooked Cuban breakfast,  the beauty and the decay in the spaces, and the warmth that we were welcomed with. In Old Havana, whether it is day or night, the energy of the city is palpable. Families hanging around their stoops conversing with their neighbors. Un hombre viejo smoking a cigar whilst sweeping his steps. A woman carrying home a slab of raw meat with her bare hands from the corner butcher.</p>
+
+                            <p>On our last night, a group of us decided to head over to this old theater. A famous salsa band was playing and we knew it would it would be a night full of dancing. We hailed a couple cars and piled in. With all the windows down, car radio blaring, we sped down the road along the Malecón.</p>
+                            <p>This was Cuba, in every possible sense.</p>
+
+                            </div>
+                       </div><!--END INTERVIEW -->
+                    </div> <!-- END BOX -->
 
                </div><!-- end wrapper div -->
             </div>
@@ -311,21 +339,34 @@
                             <!-- CONTENT -->
                             <!-- INTERVIW -->
                             <div id="pg-interview">
-                            <h2>Havana</h2>
-                            <p>I returned home from Cuba with a small bottle of 7 year rum, a half-smoked pack of Hollywood cigarettes and a few hand-thrown clay mugs from a local potter (to house the rum of course).  These souvenirs embody what were possibly the most lively five days of my life, in a city I’ve always dreamt of visiting. What I found most inspiring about my days in Cuba were those late afternoons walking around the city, feeling immersed in everyday Havana, the sun piercing through the calles, children playing soccer around every crumbling corner, and the lingering thread of music, lacing through my steps from windows and passing cars.</p>
+                            <h2>Resources</h2>
 
-<p>My friend Andrew Tyree, who founded the travel initiative Coast to Costa, asked me to join him and his group of 16 strangers on a 5-day trip to Cuba. Andrew ‘s vision and drive for Coast to Costa’s guided trips is one that I can highly relate to – travel with eagerness, experience the city as locals do and to fully submersing yourself in everything you experience while you’re there. We did nothing short of that.</p>
+                            <h4>Eat: </h4>
 
-<p>Arriving in Havana I immediately felt the energy radiating from the streets. Like any city, cars and people are bustling at all hours of the day. Abuelas and abuelos are out on their balconies hanging out their laundry. But unlike any other city I’ve ever visited, there are no banks, no grocery stores and you will very rarely find any internet.  When you stop by a fresh coconut vendor, you might end up with  an ice cold Crystal beer instead. After just a day or two the lifestyle sort overcomes you.</p>
+                            <a href="http://www.laguarida.com/en/"><h5>Paladar La Guardia</h5></a>
+                            <p>A Cuban establishment, serving traditional and adventurous recipes.</p>
 
-<p>As vibrant and alive as this country is, it does not always favor tourists.  Trying to get somewhere? Be prepared for the car to break down. Getting directions? It’s likely you’ll misunderstand them. Old cars run on makeshift engines, the architecture that was once art-deco pristine condition is a distant memory. At some point, I just accepted it all. Experiencing Cuba as it is now, at the beginning of what will be some rapid change, gave me this overwhelming sense of love for the city exactly the way it is.</p>
+                            <a href="https://www.facebook.com/paladardona.eutimia"><h5>Paladar Doña Eutemia</h5></a>
+                            <p>A centrally located, family-owned restaurant serving simple and straightforward Cuban cuisine.</p>
 
-<p>Brandon, a friend and also one of the guides for Coast to Costa, told me while walking around taking photos; “the thing you’ll quickly realize is that everyone here is an entrepreneur.” During the day you can often find someone selling coconuts out of a small trailer cart or ice cream out of an ice chest strapped to the back of their bicycle. If you walk down the street, a guy may come up and say he saved your life from passing cars and request a CUP (Cuban Convertible Peso), and you might just have to give in. While wandering around a few streets just after dark one night I noticed how quickly you could buy a plate of food, candy or something to drink right out of someone’s front window. This culture survives off of so little and a little goes a long way.</p>
+                            <a href="http://www.lahabana.com/guide/museo-del-chocolate/"><h5>Museo del Chocolate</h5></a>
+                            <p>Part museum part coffee shop, the Museo serves addictive cold chocolate drinks. </p>
 
-<p>We stayed in a casa particular, a private apartment in a multi-level building in Old Havana. From the outside, the building looked shabby and in disrepair, but inside, beautiful tiled floors and colorful painted walls dressed with paintings made for a different impression. The balconies,  looking over the busy street below, brought a sense of the outside in. When staying with our host families we quickly became a part of the family, relishing the home cooked Cuban breakfast,  the beauty and the decay in the spaces, and the warmth that we were welcomed with. In Old Havana, whether it is day or night, the energy of the city is palpable. Families hanging around their stoops conversing with their neighbors. Un hombre viejo smoking a cigar whilst sweeping his steps. A woman carrying home a slab of raw meat with her bare hands from the corner butcher.</p>
+                            <h4>Stay:</h4>
 
-<p>On our last night, a group of us decided to head over to this old theater. A famous salsa band was playing and we knew it would it would be a night full of dancing. We hailed a couple cars and piled in. With all the windows down, car radio blaring, we sped down the road along the Malecón.</p>
-<p>This was Cuba, in every possible sense.</p>
+                            <a href="http://www.casaparticular.com/"><h5>Casas Particulares</h5></a>
+                            <p>The best way to stay in Havana is rent a room in a private family house. Locals must officially to provide the service, and it’s a great way to help families financially and get a glimpse of authentic Cuban life. <a href="http://www.havanacasaparticular.com/">http://www.havanacasaparticular.com/</a></p>
+
+                            <h4>Do:</h4>
+
+                            <a href="http://www.bellasartes.cult.cu/"><h5>Museo Nacional de Bellas Artes</h5></a>
+                            <p>An expansive museum with collections from Spain, ancient Greece and modern-day Cuba.</p>
+
+                            <a href="http://www.hemingwaycuba.com/finca-la-vigia.html"><h5>Museo Hemingway Finca Vigia</h5></a>
+                            <p>An intricate glimpse into the life of Ernest Hemingway, who once adopted Cuba as his home country. </p>
+
+                            <h5>El Malecon</h5>
+                            <p>Havana’s boardwalk stretches alongside the city, offering a gallery of faces, sounds and images</p>
 
                             </div>
                        </div><!--END INTERVIEW -->
