--- a/new-site/index.html
+++ b/new-site/index.html
@@ -1,49 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-		<meta charset="UTF-8" />
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	  <title>Welcome to Tiny Atlas Quarterly | City 2017</title>
-	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	  <meta name="apple-mobile-web-app-capable" content="yes" />
-	  <meta name="description" content="Tiny Atlas Quarterly is a lifestyle travel magazine filled with rich, beautiful stories that show readers how it feels to be in the places you are interested in going as well as all the information you need to get there." />
-	  <meta name="keywords" content="photography" />
-	  <meta name="author" content="Tiny Atlas Quarterly" />
-      <meta name="p:domain_verify" content="4bdfb37a1fe17a7d155f8f4aeb954d7e"/>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <title>Welcome to Tiny Atlas Quarterly | City 2017</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="description" content="Tiny Atlas Quarterly is a lifestyle travel magazine filled with rich, beautiful stories that show readers how it feels to be in the places you are interested in going as well as all the information you need to get there."
+    />
+    <meta name="keywords" content="photography" />
+    <meta name="author" content="Tiny Atlas Quarterly" />
+    <meta name="p:domain_verify" content="4bdfb37a1fe17a7d155f8f4aeb954d7e" />
 
     <link rel="shortcut icon" href="images/favicon.png">
-	  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	  <link rel="stylesheet" type="text/css" href="css/fonts.css" />
+    <link rel="stylesheet" type="text/css" href="css/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="css/fonts.css" />
     <link rel="stylesheet" type="text/css" href="css/homepage.css" />
     <link rel="stylesheet" type="text/css" href="css/header.css" />
 
 
 
-      	<script src="http://code.jquery.com/jquery-latest.js"></script>
-		<script src="js/velocity.min.js"></script>
-      	<script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="js/velocity.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            //$(function(){
 
-	  		 $(document).ready(function() {
- 			 //$(function(){
+            $("#theedition .fade").each(function(index) {
+                $(this).hide().delay(50 * index).fadeIn(2000);
+                //$(this).hide().velocity({ opacity: 1 }, { display: "inherit" });
+            });
 
-				$("#theedition .fade").each(function(index) {
-        			$(this).hide().delay(50*index).fadeIn(2000);
-					//$(this).hide().velocity({ opacity: 1 }, { display: "inherit" });
-    			});
+        });
+    </script>
+</head>
 
-			});
-		</script>
-  </head>
-  <body>
+<body>
 
 
-  <div>
+    <div>
 
-    <div class="header-container">
-      <div class="header-logo"><a href="index.html"><img src="images/TAQ-logo.png" alt="" class="logo"></a></div>
- <div class="header-links-container">
-   <span class="header-links list-triangle"><a href="events/solas/index.html">Events</a>
+        <div class="header-container">
+            <div class="header-logo">
+                <a href="index.html"><img src="images/TAQ-logo.png" alt="" class="logo"></a>
+            </div>
+            <div class="header-links-container">
+                <span class="header-links list-triangle"><a href="events/solas/index.html">Events</a>
      <ul>
        <li><a href="events/solas/index.html">SOLAS</a></li>
        <li><a href="events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
@@ -51,98 +54,128 @@
        <li><a href="events/montauk/index.html">Montauk Show</a></li>
      </ul>
    </span>
-   <span class="header-links"><a href="about/index.html">About</a></span>
-   <span class="header-links list-triangle"><a href="about/masthead.html">Masthead</a>
+                <span class="header-links"><a href="about/index.html">About</a></span>
+                <span class="header-links list-triangle"><a href="about/masthead.html">Masthead</a>
      <ul>
        <li><a href="about/editors-letter.html">Editor's Letter</a></li>
      </ul>
    </span>
 
-   <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/collections/all" target="_blank">Shop</a></span>
- </div>
-</div>
-
-    <div class="split cover">
-
-    </div>
-    <div class="split content">
-      <div class="intro">
-        <div class="main-logo">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/cover-logo.png" alt="" />
-        </div>
-        <div class="discription">
-          <p>Tiny Atlas Quarterly is a photography-led lifestyle travel brand and social community that brings personal travel to life: in our magazine, through events and products and on immersive adventures.</p>
-        </div>
-      </div>
-
-      <div class="feature-grid">
-        <div class="feature-card feature-small"><a href="paris/index.html">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/paris-preview.png" alt="" class="preview" />
-          <div class="info">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/paris-title.png" alt="" class="title" />
-            <p class="text">From the buttery croissants to the hidden hammams, it’s the little things that make Paris a girl’s ultimate dream</p>
-            <div class="meta">12.12.2016</div>
-
-          </div>
-          </a>
+                <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/collections/all" target="_blank">Shop</a></span>
+            </div>
         </div>
 
-        <div class="feature-card feature-small"><a href="tel-aviv/index.html">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/tel-aviv-feautre.png" alt="" class="preview" />
-          <div class="info">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/tel-aviv-title.png" alt="" class="title" />
-            <p class="text">In a Tel Avivian neighborhood destined to make you feel local, even simple gazpacho tastes bett</p>
-            <div class="meta">12.12.2016</div>
-          </div>
-          </a>
+        <div class="split cover">
+
         </div>
-
-        <div class="feature-card feature-large"><a href="havana/index.html">
-          <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/havana-feature.png" alt="" class="preview" />
-          <div class="info">
-            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/havana-title.png" alt="" class="title" />
-            <p class="text">Unpredictable, unmanicured and pulsating with life, Havana might be trending but its’ shabby charm never really went anywhere</p>
-            <div class="meta">12.12.2016</div>
-          </div></a>
-        </div>
-
-      </div>
-    </div>
-
-
-    <div class="section">
-      <div class="trips">
-        <div class="description">
-        <h3>TAQ Trips</h3>
-        <p>Tiny Atlas Trips bring our stories to life in real time on incredible excursions across the globe. Produced in collaboration with adventure sports company, Earth Missions and analog creativity specialists Allswell, Tiny Atlas Trips are created for
-          the public as well as influencers and can be customized for brands.</p>
-      </div>
-
-
-              <div class="trip" style="background:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/trip-preview-tahiti.jpg) center no-repeat;background-size: cover;">
-                <div class="details">
-                  <h2>Tahiti</h2>
-                  <p>The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
-                  <button>View Trip</button>
+        <div class="split content">
+            <div class="intro">
+                <div class="main-logo">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/cover-logo.png" alt="" />
                 </div>
-              </div>
+                <div class="discription">
+                    <p>Tiny Atlas Quarterly is a photography-led lifestyle travel brand and social community that brings personal travel to life: in our magazine, through events and products and on immersive adventures.</p>
+                </div>
+            </div>
 
-        <div class="trip" style="background:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/trip-preview-tofino.jpg) center no-repeat;background-size: cover;">
-          <div class="details">
-            <h2>Tofino</h2>
-            <p>On Vancouver Island we have dreamed up an ideal five-day vacation that combines photography, surf and outdoor adventure – shaped by a live-local travel itinerary and with planet conservation at the heart of the experience.</p>
-            <button>View Trip</button>
+            <div class="feature-grid">
+                <div class="feature-card feature-small">
+                    <a href="paris/index.html">
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/paris-preview.png" alt="" class="preview" />
+                        <div class="info">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/paris-title.png" alt="" class="title" />
+                            <p class="text">From the buttery croissants to the hidden hammams, it’s the little things that make Paris a girl’s ultimate dream</p>
+                            <div class="meta">12.12.2016</div>
+
+                        </div>
+                    </a>
+                </div>
+
+                <div class="feature-card feature-small">
+                    <a href="tel-aviv/index.html">
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/tel-aviv-feautre.png" alt="" class="preview" />
+                        <div class="info">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/tel-aviv-title.png" alt="" class="title" />
+                            <p class="text">In a Tel Avivian neighborhood destined to make you feel local, even simple gazpacho tastes bett</p>
+                            <div class="meta">12.12.2016</div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="feature-card feature-large">
+                    <a href="havana/index.html">
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/havana-feature.png" alt="" class="preview" />
+                        <div class="info">
+                            <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/havana-title.png" alt="" class="title" />
+                            <p class="text">Unpredictable, unmanicured and pulsating with life, Havana might be trending but its’ shabby charm never really went anywhere</p>
+                            <div class="meta">12.12.2016</div>
+                        </div>
+                    </a>
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="section">
+            <div class="trips">
+                <div class="description">
+                    <h3>TAQ Trips</h3>
+                    <p>Tiny Atlas Trips bring our stories to life in real time on incredible excursions across the globe. Produced in collaboration with adventure sports company, Earth Missions and analog creativity specialists Allswell, Tiny Atlas Trips
+                        are created for the public as well as influencers and can be customized for brands.</p>
+                </div>
+
+
+                <div class="trip" style="background:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/trip-preview-tahiti.jpg) center no-repeat;background-size: cover;">
+                    <div class="details">
+                        <h2>Tahiti</h2>
+                        <p>The islands, deep in the pacific, offer tropical landscapes, a reef accessible in minutes that’s a mecca for underwater wildlife just waiting to be photographed, and equally exciting surf in each spot.</p>
+                        <button>View Trip</button>
+                    </div>
+                </div>
+
+                <div class="trip" style="background:url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/trip-preview-tofino.jpg) center no-repeat;background-size: cover;">
+                    <div class="details">
+                        <h2>Tofino</h2>
+                        <p>On Vancouver Island we have dreamed up an ideal five-day vacation that combines photography, surf and outdoor adventure – shaped by a live-local travel itinerary and with planet conservation at the heart of the experience.</p>
+                        <button>View Trip</button>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="section">
+          <div class="section-issues">
+            <div class="description">
+              <h2>Latest Issues</h2>
+            </div>
+
+            <div class="issue">
+                <a href="#">
+                  <img src="images/tiny-atlas-cover-west-coast-2016.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="issue">
+                <a href="#">
+                  <img src="images/tiny-atlas-cover-earth-2015.jpg" alt="">
+                </a>
+            </div>
+
+            <div class="issue">
+                <a href="#">
+                  <img src="images/tiny-atlas-cover-fire-2015.jpg" alt="">
+                </a>
+            </div>
+
           </div>
         </div>
 
-      </div>
-
     </div>
 
-
-  </div>
-
-  </body>
+</body>
 
 
 </html>
