added city logo

--- a/new-site/index.html
+++ b/new-site/index.html
@@ -23,6 +23,7 @@
 
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="js/velocity.min.js"></script>
+    <script src="js/instafeed.js"></script>
     <script>
         $(document).ready(function() {
             //$(function(){
@@ -61,19 +62,19 @@
      </ul>
    </span>
 
-                <span class="header-links"><a href="http://shop.tinyatlasquarterly.com/collections/all" target="_blank">Shop</a></span>
+                <span class="header-links"><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders" target="_blank">Shop</a></span>
             </div>
         </div>
 
         <div class="split cover">
-
+            <img src="images/2017-city-logo.png" alt="">
         </div>
         <div class="split content">
             <div class="intro">
                 <div class="main-logo">
                     <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/cover-logo.png" alt="" />
                 </div>
-                <div class="discription">
+                <div class="description">
                     <p>Tiny Atlas Quarterly is a photography-led lifestyle travel brand and social community that brings personal travel to life: in our magazine, through events and products and on immersive adventures.</p>
                 </div>
             </div>
@@ -120,7 +121,7 @@
         <div class="section">
             <div class="trips">
                 <div class="description">
-                    <h3>TAQ Trips</h3>
+                    <h2>TAQ Trips</h2>
                     <p>Tiny Atlas Trips bring our stories to life in real time on incredible excursions across the globe. Produced in collaboration with adventure sports company, Earth Missions and analog creativity specialists Allswell, Tiny Atlas Trips
                         are created for the public as well as influencers and can be customized for brands.</p>
                 </div>
