Feature & Issue Styling

--- a/new-site/about/index.html
+++ b/new-site/about/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="../css/fonts.css" />
         <link rel="stylesheet" type="text/css" href="../css/features.css" />
+        <link rel="stylesheet" type="text/css" href="../css/header.css" />
         <link rel="shortcut icon" href="../images/favicon.png">
 
         <script src="http://code.jquery.com/jquery-latest.js"></script>
@@ -65,6 +66,30 @@
 
 <body id="taqPage">
 
+  <div class="header-container">
+      <div class="header-logo">
+          <a href="../index.html"><img src="../images/TAQ-logo.png" alt="" class="logo"></a>
+      </div>
+      <div class="header-links-container">
+          <span class="header-links list-triangle"><a href="events/solas/index.html">Events</a>
+<ul>
+ <li><a href="events/solas/index.html">SOLAS</a></li>
+ <li><a href="events/tahiti-tofino/index.html">Tiny Atlas Trips</a></li>
+ <li><a href="events/leadinghotelsgiveaway/index.html">Giveaway: Leading Hotels</a></li>
+ <li><a href="events/montauk/index.html">Montauk Show</a></li>
+</ul>
+</span>
+          <span class="header-links"><a href="about/index.html">About</a></span>
+          <span class="header-links list-triangle"><a href="about/masthead.html">Masthead</a>
+<ul>
+ <li><a href="about/editors-letter.html">Editor's Letter</a></li>
+</ul>
+</span>
+
+          <span class="header-links"><a href="https://tiny-atlas-solas-a-casual-camera-bag-for-photograp.backerkit.com/hosted_preorders" target="_blank">Shop</a></span>
+      </div>
+  </div>
+
             <!-- PAGE NAVIGATION ------------------------------------------------------------->
 
 
@@ -78,7 +103,7 @@
                   <source srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                   <source srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                   <!--[if IE 9]></video><![endif]-->
-                  <img srcset="images/01_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                  <img srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
                 </picture>
                 <!-- IMAGE END -->
 
@@ -90,7 +115,7 @@
                        <!-- CONTENT -->
                        <!-- INTERVIW -->
                        <div id="pg-interview">
-                       <div class="title-ill"><img src="images/logo-big.png" alt="" style="max-width:278px; margin:auto"></div>
+                       <div class="title-ill about-logo"><img src="images/logo-big.png" alt=""></div>
                        <p>Tiny Atlas Quarterly is a collective of talented creatives that specializes in telling rich, beautiful stories that unfold through images, art, and personal accounts of fascinating people and remarkable places.</p>
                        <p>Tiny Atlas Creative offers travel and lifestyle photography, video and editorial story content for an array of media and marketing platforms. We can also help brands reach influencers, extend their awareness and increase engagement via our social media channels, events, and other platforms.</p>
                        <p>Tiny Atlas Quarterly Magazine is an extension of our collaborative work as professionals, created on a very personal level. It’s where we share all the places we love to travel ourselves, as well as how we see our own backyards. Think of it as the after party, once the commercial shoot wraps and, handily, the little black book of where to go and what to do if you find yourself there one day, too.</p>
@@ -112,24 +137,7 @@
             <!-- END PAGE 01 ------------------------------------------------------------->
 
 <!-- PAGE 0 ------------------------------------------------------------->
-        	<!-- wrapper div -->
-            <div id="page-zero" class="pg-page">
-            <div class="pg-wrapper">
-               <!-- image -->
-               <img src="../images/blank-L.png" />
-           </div><!-- end wrapper div -->
-           		<!-- NAV -->
-          		<div id="nav-holder">
-                <div id="nav">
-                  <a href="../index.html"><img src="../images/feature-logo.png" alt="Tiny Atlas Quarterly" class="crest"></a>
-                  <div class="title">
-                    <span class="issue"> </span><br>
-                    <span class="feature"> </span>
-                  </div>
-                </div>
-              </div>
 
-           </div>
           <!-- END PAGE 0 ------------------------------------------------------------->
 
         <script type="text/javascript" src="../js/hammer.min.js"></script>
