--- a/new-site/havana/index.html
+++ b/new-site/havana/index.html
@@ -90,7 +90,7 @@
                 </picture>
                 <!-- IMAGE END -->
 
-                <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                <div class="pg-box pg-lower-caption pg-upper-right-caption pg-box-intro">
 
                     <!-- CAPTION -->
                     <!-- LEFT CAPTION -->
@@ -332,9 +332,9 @@
                   <img srcset="images/12_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
                 </picture>
                 <!-- IMAGE END -->
-                
+
                 <!-- BOX  INTERVIEW-->
-                     <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                     <div class="pg-box pg-lower-caption pg-upper-right-caption">
 
                          <!-- CAPTION -->
                          <!-- LEFT CAPTION -->
