--- a/new-site/paris/index.html
+++ b/new-site/paris/index.html
@@ -114,7 +114,7 @@
             </picture>
             <!-- IMAGE END -->
 
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-box-intro">
 
                 <!-- CAPTION -->
                 <!-- LEFT CAPTION -->
