--- a/new-site/index.html
+++ b/new-site/index.html
@@ -76,6 +76,7 @@
                 </div>
                 <div class="description">
                     <p>Tiny Atlas Quarterly is a photography-led lifestyle travel brand and social community that brings personal travel to life: in our magazine, through events and products and on immersive adventures.</p>
+                    <h3>Current Issue - 2017 City</h3>
                 </div>
             </div>
 
@@ -86,7 +87,7 @@
                         <div class="info">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/paris-title.png" alt="" class="title" />
                             <p class="text">From the buttery croissants to the hidden hammams, it’s the little things that make Paris a girl’s ultimate dream</p>
-                            <div class="meta">12.12.2016</div>
+                            <div class="meta">Girls <span>2.28.2016</span></div>
 
                         </div>
                     </a>
@@ -98,7 +99,7 @@
                         <div class="info">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/tel-aviv-title.png" alt="" class="title" />
                             <p class="text">In a Tel Avivian neighborhood destined to make you feel local, even simple gazpacho tastes bett</p>
-                            <div class="meta">12.12.2016</div>
+                            <div class="meta">Neighborhood <span>2.28.2016</span></div>
                         </div>
                     </a>
                 </div>
@@ -109,7 +110,7 @@
                         <div class="info">
                             <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/havana-title.png" alt="" class="title" />
                             <p class="text">Unpredictable, unmanicured and pulsating with life, Havana might be trending but its’ shabby charm never really went anywhere</p>
-                            <div class="meta">12.12.2016</div>
+                            <div class="meta">Travel Log <span>2.28.2016</span></div>
                         </div>
                     </a>
                 </div>
