--- a/new-site/tel-aviv/index.html
+++ b/new-site/tel-aviv/index.html
@@ -108,7 +108,7 @@
             </picture>
             <!-- IMAGE END -->
 
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-box-intro">
 
                 <!-- CAPTION -->
                 <!-- LEFT CAPTION -->
@@ -116,10 +116,10 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <div class="title-ill"><img src="images/havana-title-illo.png" alt="" style="max-width:278px;"></div>
-                        <h3>Photography By Gabriel Flores<br />
-                         Written By Gabriel Flores<br />
-                         Title Illustration By Mark Sloan</h3>
+                        <div class="title-ill"><img src="images/tel-aviv-title-illo.png" alt="" style="max-width:278px;"></div>
+                        <h3>Photography by: Liah Chesnokov<br />
+                         Written by: Flora Tsapovsky<br />
+                         Title &amp; Illustration by: Alex Hollender</h3>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
