added insta & trips design

--- a/new-site/havana/index.html
+++ b/new-site/havana/index.html
@@ -99,9 +99,9 @@
                        <!-- INTERVIW -->
                        <div id="pg-interview">
                        <div class="title-ill"><img src="images/havana-title-illo.png" alt="" style="max-width:278px;"></div>
-                       <h3>Photography By Gabriel Flores<br />
-                         Written By Gabriel Flores<br />
-                         Title Illustration By Mark Sloan</h3>
+                       <h3>Photography by: Gabriel Flores<br />
+                         Written by: Gabriel Flores<br />
+                         Title Illustration by: Mark Sloan</h3>
                        </div>
                   </div><!--END INTERVIEW -->
                </div> <!-- END BOX -->
