--- a/new-site/paris/index.html
+++ b/new-site/paris/index.html
@@ -123,9 +123,10 @@
                     <!-- INTERVIW -->
                     <div id="pg-interview">
                         <div class="title-ill"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/199072/paris-title.png" alt="" style="max-width:278px;"></div>
-                        <h3>Photography By Christa Renee<br />
-                         Written By Emily K Nathan<br />
-                         Title Illustration By Holly Schnackenberg</h3>
+                        <h3>Photography by: Christa Renee<br />
+                         Written by: Emily K Nathan<br />
+                         Title Illustration by: Holly Schnackenberg<br />
+                         Food Illustrations by: Sharon Hwang</h3>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
@@ -198,7 +199,8 @@
                 <!-- CONTENT -->
                 <!-- INTERVIW -->
                 <div id="pg-interview">
-                    <h2>Paris</h2>
+                    <img src="images/Paris-Baguette.jpg" alt="" class="ill-small">
+                    <h2 class="with-ill-small">Paris</h2>
                     <p>With its cobblestone streets, flower shops and chocolateries, it might seem that Paris was built to satisfy the romantic yearnings in every girl's heart. It is a city of magic, where the sun rises over sandy facades and secret gardens
                         and sets in the Seine, its light bathing the world in a dusty glow. In Paris, no treat is too sinful, not even on a workday; it's a place for long, leisurely strolls, impromptu dips into the theatre for a classic film, and evening
                         trips to the Turkish baths — a place where every day deserves a morning pain au chocolat, an afternoon tea and a night cap to boot.</p>
@@ -346,7 +348,8 @@
                 <!-- CONTENT -->
                 <!-- INTERVIW -->
                 <div id="pg-interview">
-                    <h2>A Buttery Breakfast: Morning Rituals</h2>
+                    <img src="images/Paris-Pastries.jpg" alt="" class="ill-small">
+                    <h2 class="with-ill-small">A Buttery Breakfast: Morning Rituals</h2>
                     <p>Why make breakfast at home when every city block is a smörgasboard of the world's most luscious delights? From your quaint hotel room in the 10th arrondissement, today's haven for hipster cafes and low-key modern bistros, take a stroll
                         toward the Canal Saint Martin and pick up a cafe crème à emporter (to go) from Ten Belles. Don't drink it all in one sip — it must be saved for a taste of heaven at La Boulangerie Des Pains et Des Idées, just across the water.
                         You'll never find a flakier pain au chocolat, or a richer chausson aux pommes.</p>
@@ -385,7 +388,8 @@
                     <!-- CONTENT -->
                     <!-- INTERVIW -->
                     <div id="pg-interview">
-                        <h2>Culture and Coffee</h2>
+                      <img src="images/Paris-Brie.jpg" alt="" class="ill-small">
+                        <h2 class="with-ill-small">Culture and Coffee</h2>
                         <p>Once you've had your dose, stroll past La Place de la République and into the Marais, past the art galleries and clothing boutiques to the Centre Pompidou. The largest-ever retrospective of works by American artist Cy Twombly won't
                             disappoint, and a quick espresso pick-me-up in the museum's 6th floor Café Panoramique offers stunning aerial views of the city. Culture fix complete, it's time to eat again. Continue through the Marais and wander down the
                             historic streets of the Jewish quarter, with its Kosher bakeries and falafel sellers. But don't let them entice you: Miznon makes the best lamb kebab sandwich in the city, served with fresh cilantro and herbs in a warm pita.
@@ -426,7 +430,8 @@
                 <!-- CONTENT -->
                 <!-- INTERVIW -->
                 <div id="pg-interview">
-                    <h2>Relax and Repose</h2>
+                    <img src="images/Paris-Icecream.jpg" alt="" class="ill-small">
+                    <h2 class="with-ill-small">Relax and Repose</h2>
                     <p>Crossing the Pont Marie bridge will take you to the narrow streets of the Île Saint-Louis, home of Berthillon, the grand-dame of French ice cream. Don't mind the line; it's worth the wait. Next stop is La Mosquée de Paris, located
                         in the heart of the Latin Quarter, for a Moroccan mint tea and a relaxing Hammam: take a dip in the Turkish baths or just enjoy a steam. When you're ready to meet the world again, head back up the hill past La Pantheon and down
                         to the stunning Luxembourg Gardens, which have inspired the likes of Claude Monet and Ernest Hemingway. Before you go in, grab picnic treats at La Coopérative laitiere du Beaufortain, where they offer farmer cheeses, charcuterie,
@@ -459,13 +464,18 @@
             </picture>
             <!-- IMAGE END -->
 
+
+                        <!-- BOX  INTERVIEW-->
+                             <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+
             <!-- CAPTION -->
             <!-- LEFT CAPTION -->
             <div class="pg-box-content">
                 <!-- CONTENT -->
                 <!-- INTERVIW -->
                 <div id="pg-interview">
-                    <h2>Just the Classics</h2>
+                  <img src="images/Paris-Apricots.jpg" alt="" class="ill-small">
+                    <h2 class="with-ill-small">Just the Classics</h2>
                     <p>As the sun sets, you can leave the garden on the Northwestern corner and hit the Rue de Rennes for some of the city's best shopping. Don't miss the chic Bon Marché, the world's oldest department store, housed in a gorgeous Art Nouveau
                         building featuring ironwork by Gustave Eiffel. For dinner, armed with all your purchases, you won't want to go far: La Rotonde Montparnasse is a French classic. Start with foie gras and escargots in herbed butter, and finish the
                         meal with a Tarte Tatin. Sweet and rich, served with a dollop of crème fraiche, it's the fitting end to a perfect Parisian day.</p>
@@ -659,7 +669,8 @@
                 <!-- CONTENT -->
                 <!-- INTERVIW -->
                 <div id="pg-interview">
-                    <h2>Resources</h2>
+                    <img src="images/Paris-Radishes.jpg" alt="" class="ill-small">
+                    <h2 class="with-ill-small">Resources</h2>
 
                     <h4>Eat:</h4>
 
