--- a/new-site/tel-aviv/index.html
+++ b/new-site/tel-aviv/index.html
@@ -264,7 +264,8 @@
                 <!-- CONTENT -->
                 <!-- INTERVIW -->
                 <div id="pg-interview">
-                    <h2>Tel Aviv</h2>
+                    <img src="images/tel-aviv-map.png" alt="" class="ill">
+                    <h2 class="with-ill">Tel Aviv</h2>
                     <p>
                       Tel Aviv, to many visitors, is all about the beaches. Being on the coastline is an undeniable perk, but Tel Aviv is larger than its most marketable feature. In fact, a big percentage of its nondescript charm (ask any local, and they’ll lovingly tell you Tel Aviv is in fact ‘ugly’) lies in the city’s inner neighborhoods, along its dusty boulevards and among its shabby-chic Bauhaus buildings. One of those neighborhoods is Florentin - located in the south of Tel Aviv, between historic Neve Tzedek, leafy Rothschild Boulevard and sketchy Tahana Merkazit. Florentine is neither stylish, sketchy or picturesque - it’s a lived-in Tel Avivian neighborhood with rows upon rows of 4-stories apartment buildings, and a myriad of bars and eateries dotting the narrow streets. During the day, it’s a hectic hub of small houseware stores, fabric wholesalers and repairs businesses and at night, it’s a popular hangout for food, drinks and people-watching, free of pretense and always welcoming.
                     </p>
@@ -309,28 +310,6 @@
                 <!-- CONTENT -->
                 <!-- INTERVIW -->
                 <div id="pg-interview">
-                    <h2>Halutzim 3 lentil salad</h2>
-                    <ul class="recipe">
-                      <li>1 pound black ‘caviar’ lentils </li>
-                      <li>1 white onion, peeled and chopped</li>
-                      <li>1 carrot, peeled and chopped </li>
-                      <li>2 celery stalks</li>
-                      <li>Bay leaf</li>
-                      <li>Cumin</li>
-                      <li>Peeled garlic cloves</li>
-                      <li>A handful of raw almonds</li>
-                      <li>A handful of lemon pickle</li>
-                      <li>1 tbs hot green pepper (like jalapeno)</li>
-                      <li>A bunch of cilantro</li>
-                      <li>A bunch of parsley</li>
-                      <li>1 tomato, chopped</li>
-                      <li>Atlantic salt, freshly ground pepper</li>
-                      <li>Goat yogurt</li>
-                      <li>Olive oil</li>
-                    </ul>
-                    <p>
-                      In a thick pot, heat the oil and brown the vegetables (celery, garlic, onion and carrots). Add lentils and spices, add 1 inch water above the lentils, and cover with a lid.  Bring to boil, then simmer for about 15 minutes,until lentils are soft. Discard vegetables and cool. Mix cooked lentils with lemon, almonds, hot pepper, greens, chopped tomato, salt and pepper. Season with olive oil and serve on top of yogurt.
-                    </p>
 
                     <h2>HaHalutzim 3 gazpacho (for a big party)</h2>
                     <ul class="recipe">
@@ -348,6 +327,7 @@
                     <p>
                       Whizz all the ingredients in a food processor, while adding olive oil until the mixture turns silky smooth.
                     </p>
+
 
                 </div>
             </div>
@@ -411,66 +391,6 @@
             </picture>
             <!-- IMAGE END -->
 
-            <!-- BOX  INTERVIEW-->
-            <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
-              <!-- CAPTION -->
-              <!-- LEFT CAPTION -->
-              <div class="pg-box-content">
-                 <!-- CONTENT -->
-                 <!-- INTERVIW -->
-                 <div id="pg-interview">
-                 <h2>Resources</h2>
-
-                 <h4>Eat: </h4>
-
-                 <a href="https://www.halutzim3.com/"><h5>HaHlutzim 3</h5></a>
-                 <p>An intimate restaurant by Eytan Vanunu and Naama Szterenlicht.</p>
-
-                 <a href="http://dalidatlv.co.il/"><h5>Dalida</h5></a>
-                 <p>A romantic, candle lit restaurant with an outdoor garden, serving elevated Mediterranean fare.</p>
-
-                 <a href="https://www.facebook.com/Fifis.Asian.Food/"><h5>Fifi’s</h5></a>
-                 <p>A brand new, family-owned spot serving authentic Thai food.</p>
-
-                 <a href="https://www.facebook.com/CaffeKaymak/"><h5>Cafe Kaimak</h5></a>
-                 <p>A tiny coffee shop perfect for breakfast.</p>
-
-                 <a href="https://www.facebook.com/Barmitzvah.kaymak/"><h5>Bar Mitzva</h5></a>
-                 <p>A small local bar with unpretentious atmosphere.</p>
-
-                 <a href="https://www.facebook.com/levinsky41/"><h5>Cafe Levinsky 41</h5></a>
-                 <p>A tiny kiosk serving delicious sparkly drinks.</p>
-
-                 <a href="http://en.shuktlv.co.il/category/chavshush"><h5>Chavshush Ariye</h5></a>
-                 <p>A chaotic, authentic spice shop run by a family.</p>
-
-                 <a href="http://en.shuktlv.co.il/category/levinsky-burekas"><h5>Burekas Levinsky</h5></a>
-                 <p>A bakery specializing in crumbly,  savory phyllo dough pastries.</p>
-
-                 <h4>Stay:</h4>
-
-                 <a href="https://florentinhouse.com/"><h5>Florentine House</h5></a>
-                 <p>A urban, minimal boutique hotel in the heart of Florentin.</p>
-
-                 <a href="https://www.airbnb.com/rooms/13655167?adults=1&checkin=04%2F01%2F2017&checkout=04%2F 02%2F2017&children=0&guests=1&infants=0&locale=en&s=VVhYAsqw"><h5>Dream Bauhaus</h5></a>
-                 <p>A spacious loft with a clawfoot bathtub and exposed brick walls.</p>
-
-                 <a href="http://lilyandbloom.com/en/homepage/"><h5>Lily and Bloom</h5></a>
-                 <p>A new and polished boutique hotel just outside of Florentin.</p>
-
-                 <h4>Do:</h4>
-
-                 <a href="http://en.shuktlv.co.il/category/chaim-raphael"><h5>Haim Rafael</h5></a>
-                 <p>This is the best deli in the neighborhood, offering pickles, charcuterie and smoked fish.</p>
-
-                 <a href="https://www.tel-o-fun.co.il/en/"><h5>Tel-O-fun</h5></a>
-                 <p>Explore the neighborhood with Tel Aviv’s bike share system. The green bike stations  all over
-Florentin, available to rent on hourly basis.</p>
-
-                 </div>
-            </div><!--END INTERVIEW -->
-           </div> <!-- END BOX -->
-
         </div>
         <!-- end wrapper div -->
     </div>
@@ -489,6 +409,47 @@ Florentin, available to rent on hourly basis.</p>
                 <img srcset="images/13_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+            <!-- BOX  INTERVIEW-->
+                 <div class="pg-box pg-lower-caption pg-upper-right-caption pg-lower">
+            <!-- CAPTION -->
+            <!-- LEFT CAPTION -->
+            <div class="pg-box-content">
+                <!-- CONTENT -->
+                <!-- INTERVIW -->
+                <div id="pg-interview">
+
+                  <h2>Halutzim 3 lentil salad</h2>
+                  <ul class="recipe">
+                    <li>1 pound black ‘caviar’ lentils </li>
+                    <li>1 white onion, peeled and chopped</li>
+                    <li>1 carrot, peeled and chopped </li>
+                    <li>2 celery stalks</li>
+                    <li>Bay leaf</li>
+                    <li>Cumin</li>
+                    <li>Peeled garlic cloves</li>
+                    <li>A handful of raw almonds</li>
+                    <li>A handful of lemon pickle</li>
+                    <li>1 tbs hot green pepper (like jalapeno)</li>
+                    <li>A bunch of cilantro</li>
+                    <li>A bunch of parsley</li>
+                    <li>1 tomato, chopped</li>
+                    <li>Atlantic salt, freshly ground pepper</li>
+                    <li>Goat yogurt</li>
+                    <li>Olive oil</li>
+                  </ul>
+                  <p>
+                    In a thick pot, heat the oil and brown the vegetables (celery, garlic, onion and carrots). Add lentils and spices, add 1 inch water above the lentils, and cover with a lid.  Bring to boil, then simmer for about 15 minutes,until lentils are soft. Discard vegetables and cool. Mix cooked lentils with lemon, almonds, hot pepper, greens, chopped tomato, salt and pepper. Season with olive oil and serve on top of yogurt.
+                  </p>
+
+                </div>
+            </div>
+            <!--END INTERVIEW -->
+        </div>
+        <!-- END BOX -->
+
+
+
         </div>
         <!-- end wrapper div -->
     </div>
@@ -507,6 +468,68 @@ Florentin, available to rent on hourly basis.</p>
                 <img srcset="images/14_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
             </picture>
             <!-- IMAGE END -->
+
+
+                        <!-- BOX  INTERVIEW-->
+                        <div class="pg-box pg-lower-caption pg-upper-right-caption pg-caption-light">
+                          <!-- CAPTION -->
+                          <!-- LEFT CAPTION -->
+                          <div class="pg-box-content">
+                             <!-- CONTENT -->
+                             <!-- INTERVIW -->
+                             <div id="pg-interview">
+                             <h2>Resources</h2>
+
+                             <h4>Eat: </h4>
+
+                             <a href="https://www.halutzim3.com/"><h5>HaHlutzim 3</h5></a>
+                             <p>An intimate restaurant by Eytan Vanunu and Naama Szterenlicht.</p>
+
+                             <a href="http://dalidatlv.co.il/"><h5>Dalida</h5></a>
+                             <p>A romantic, candle lit restaurant with an outdoor garden, serving elevated Mediterranean fare.</p>
+
+                             <a href="https://www.facebook.com/Fifis.Asian.Food/"><h5>Fifi’s</h5></a>
+                             <p>A brand new, family-owned spot serving authentic Thai food.</p>
+
+                             <a href="https://www.facebook.com/CaffeKaymak/"><h5>Cafe Kaimak</h5></a>
+                             <p>A tiny coffee shop perfect for breakfast.</p>
+
+                             <a href="https://www.facebook.com/Barmitzvah.kaymak/"><h5>Bar Mitzva</h5></a>
+                             <p>A small local bar with unpretentious atmosphere.</p>
+
+                             <a href="https://www.facebook.com/levinsky41/"><h5>Cafe Levinsky 41</h5></a>
+                             <p>A tiny kiosk serving delicious sparkly drinks.</p>
+
+                             <a href="http://en.shuktlv.co.il/category/chavshush"><h5>Chavshush Ariye</h5></a>
+                             <p>A chaotic, authentic spice shop run by a family.</p>
+
+                             <a href="http://en.shuktlv.co.il/category/levinsky-burekas"><h5>Burekas Levinsky</h5></a>
+                             <p>A bakery specializing in crumbly,  savory phyllo dough pastries.</p>
+
+                             <h4>Stay:</h4>
+
+                             <a href="https://florentinhouse.com/"><h5>Florentine House</h5></a>
+                             <p>A urban, minimal boutique hotel in the heart of Florentin.</p>
+
+                             <a href="https://www.airbnb.com/rooms/13655167?adults=1&checkin=04%2F01%2F2017&checkout=04%2F 02%2F2017&children=0&guests=1&infants=0&locale=en&s=VVhYAsqw"><h5>Dream Bauhaus</h5></a>
+                             <p>A spacious loft with a clawfoot bathtub and exposed brick walls.</p>
+
+                             <a href="http://lilyandbloom.com/en/homepage/"><h5>Lily and Bloom</h5></a>
+                             <p>A new and polished boutique hotel just outside of Florentin.</p>
+
+                             <h4>Do:</h4>
+
+                             <a href="http://en.shuktlv.co.il/category/chaim-raphael"><h5>Haim Rafael</h5></a>
+                             <p>This is the best deli in the neighborhood, offering pickles, charcuterie and smoked fish.</p>
+
+                             <a href="https://www.tel-o-fun.co.il/en/"><h5>Tel-O-fun</h5></a>
+                             <p>Explore the neighborhood with Tel Aviv’s bike share system. The green bike stations  all over
+            Florentin, available to rent on hourly basis.</p>
+
+                             </div>
+                        </div><!--END INTERVIEW -->
+                       </div> <!-- END BOX -->
+
 
         </div>
         <!-- end wrapper div -->
