--- a/new-site/index.html
+++ b/new-site/index.html
@@ -155,13 +155,18 @@
         </div>
 
         <div class="section">
+          <div class="description">
+              <h2>Instagram</h2>
+              <p>#mytinyatlas</p>
+          </div>
           <div id="instafeed"class="">
-            
+
           </div>
           <script type="text/javascript">
     var feed = new Instafeed({
         get: 'user',
         userId: '9468500',
+        limit: '8',
         accessToken: '9468500.1e17c13.45821e04c6c644409e850ef202465182',
         template: '<a href="{{link}}"><img src="{{image}}" /></a>'
     });
