--- a/new-site/index.html
+++ b/new-site/index.html
@@ -167,6 +167,7 @@
         get: 'user',
         userId: '9468500',
         limit: '8',
+        resolution: 'low_resolution',
         accessToken: '9468500.1e17c13.45821e04c6c644409e850ef202465182',
         template: '<a href="{{link}}"><img src="{{image}}" /></a>'
     });
