cha-cha-cha-changes

--- a/new-site/paris/index.html
+++ b/new-site/paris/index.html
@@ -126,7 +126,7 @@
                         <h3>Photography by: Christa Renee<br />
                          Written by: Emily K Nathan<br />
                          Title Illustration by: Holly Schnackenberg<br />
-                         Food Illustrations by: Sharon Hwang</h3>
+                         Food Illustrations by: Sharon Matas</h3>
                     </div>
                 </div>
                 <!--END INTERVIEW -->
